# btx-docs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSphinx.cmake
docs/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/doctrees/: environment.pickle  index.doctree
docs/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_static/: documentation_options.js
source/: Doxyfile.in  conf.py  index.rst
